# ThreatLens

./: .gitignore  CLAUDE.md  booking.pdf-20260414-143603-peepdf-jserrors.txt  config.yaml  main.py  pyproject.toml
core/: __init__.py  config_loader.py  file_intake.py  pipeline.py  scoring.py
docs/: project_full.txt  scoring.md
malware_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/: __init__.py
modules/dynamic/: __init__.py  cape_provider.py  provider_base.py  speakeasy_provider.py  vm_worker_provider.py
modules/enrichment/: __init__.py  virustotal.py
modules/static/: __init__.py  archive_analysis.py  capa_analysis.py  doc_analysis.py  html_analysis.py  ioc_extractor.py  onenote_analysis.py  pdf_analysis.py  pe_analysis.py  string_analysis.py  yara_scanner.py
modules/static/archive_analysis/: __init__.py  bomb_guard.py  embedded_exec.py  entries.py  indicators.py  other_handlers.py  rar_handler.py  rar_raw_headers.py  routing.py  scoring.py  sevenzip_handler.py  sfx_detect.py  tarball_handler.py  zip_handler.py
modules/static/doc_analysis/: __init__.py  ole_objects.py  oleid_indicators.py  routing.py  scoring.py  template_inject.py  vba_macros.py  xlm_macros.py
modules/static/html_analysis/: __init__.py  clickfix.py  external.py  obfuscation.py  smuggling.py  structure.py
modules/static/onenote_analysis/: __init__.py  embedded.py  indicators.py  parser.py  scoring.py
modules/static/pe_analysis/: __init__.py  fingerprint.py  headers.py  imports.py  metadata.py  packers.py  (+4 more)
reporting/: __init__.py  html_reporter.py  json_reporter.py  shared.py  terminal_reporter.py
reporting/html_reporter/: __init__.py  archive.py  debug.py  doc.py  file_info.py  findings.py  onenote.py  pe.py  recommendations.py  tables.py
reporting/templates/: report.html.j2
reporting/terminal_reporter/: __init__.py  _common.py  archive.py  doc.py  findings.py  header.py  onenote.py  pe.py  recommendations.py  score.py  tables.py
tests/: __init__.py  test_ioc_extractor.py  test_pe_analysis.py  test_pipeline.py  test_scoring.py
