[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "malware-triage"
version = "0.1.0"
description = "Portable CLI malware triage and analysis tool with transparent confidence scoring"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pefile>=2023.2.7",
    "python-magic>=0.4.27",
    "tlsh>=4.5.0",
    "ssdeep>=3.4",
    "yara-python>=4.3.0",
    "oletools>=0.60.1",
    "peepdf-3>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
dynamic = [
    "speakeasy-emulator>=1.5.9",
]

[project.scripts]
malware-triage = "main:cli"

[tool.setuptools]
py-modules = ["main"]
packages = [
    "core",
    "modules",
    "modules.static",
    "modules.enrichment",
    "modules.dynamic",
    "reporting",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
